1.6.4

UX improvements to send dialog, improve handling when user tries to send amounts equal too or larger than available balance.
New menu item for importing private keys.
Modify createaccount RPC command so that it can also create legacy accounts.
Support for read only (watch) HD accounts.
New RPC commands for read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
Support for read only (watch) HD seeds.
New RPC command for read only (watch) HD seeds, getreadonlyseed.
New 'deleteaccount' RPC command
Add new command line flag '-coinbasesignature=' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
Add a special warning if the users wallet.dat is readonly (instead of displaying a generic/scary 'corrupted wallet' message) 
Merge a bug fix from user 'mezrin' for 'dumpwallet' RPC command.
Fix a bug in RPC command 'gettransaction' where transaction would not show if 'rpconlylistsecuredtransactions' flag was set to false.

1.6.3

Fix incorrect getaddressesbyaccount output.
Fix a possible crash in the checkpoint system.

1.6.2

Bring back RPC command that was removed in 1.6.0, adapted to the new account system - getaccount "Guldenaddress"
Bring back RPC command that was removed in 1.6.0, adapted to the new account system - getaddressesbyaccount "account"

1.6.1

Minor bugfix release.

1.6.0

New user interface with drastic improvements over the old user interface.
Ticker/Exchange rate integration into app.
In wallet support for buying coins with euro via nocks.
New 'account based' wallet internals.
New in wallet buy support for bitcoin and IBAN via nocks API.
Full support for BIP33 and BIP44 HD wallet standards with mnemonics.
Implement support for synchronised mobile accounts.
Update to upstream bitcoin 0.13 codebase providing numerous bug fixes and improvements.
Improve the checkpointing code, fix a checkpoint corruption issue that some users were experiencing.