@@ -12,6 +12,7 @@ qt/_Gulden/res/DialogBackground.png \
 qt/_Gulden/fonts/FontAwesome.otf \
 qt/_Gulden/fonts/guldensign.ttf \
 qt/_Gulden/res/Import.png \
+qt/_Gulden/res/Rescan.png \
 qt/_Gulden/fonts/Lato-Black.ttf \
 qt/_Gulden/fonts/Lato-BlackItalic.ttf \
 qt/_Gulden/fonts/Lato-Bold.ttf \
