@@ -559,6 +559,7 @@ bool BitcoinGUI::addWallet(const QString& name, WalletModel *walletModel)
     setWalletActionsEnabled(true);
 
     connect(walletModel, SIGNAL(balanceChanged(CAmount,CAmount,CAmount,CAmount,CAmount,CAmount)), this, SLOT(setBalance(CAmount,CAmount,CAmount,CAmount,CAmount,CAmount)));
+    connect(walletModel, SIGNAL(showProgress(QString,int)), this, SLOT(showProgress(QString,int)));
 
     return walletFrame->addWallet(name, walletModel);
 }
@@ -1155,28 +1156,30 @@ void BitcoinGUI::detectShutdown()
 
 void BitcoinGUI::showProgress(const QString &title, int nProgress)
 {
-    if (nProgress == 0)
+    if (nProgress == 100)
     {
-        progressDialog = new QProgressDialog(title, "", 0, 100);
-        progressDialog->setWindowModality(Qt::ApplicationModal);
-        progressDialog->setMinimumDuration(0);
-        progressDialog->setCancelButton(0);
-        progressDialog->setAutoClose(false);
-        progressDialog->setValue(0);
-        
-        //fixme: Minimum size
-        progressDialog->setMinimumSize(300,100);
-    }
-    else if (nProgress == 100)
-    {
-        if (progressDialog)
+        if (progressBarLabel->text() == title)
         {
-            progressDialog->close();
-            progressDialog->deleteLater();
+            progressBarLabel->setVisible(false);
+            progressBar->setVisible(false);
+            m_pGuldenImpl->hideProgressBarLabel();
         }
     }
-    else if (progressDialog)
-        progressDialog->setValue(nProgress);
+    else
+    {
+        if (!progressBar->isVisible() || progressBarLabel->text() == title)
+        {
+            progressBarLabel->setText(title);
+            progressBar->setValue(nProgress * 1000000000.0 + 0.5);
+            progressBarLabel->setVisible(true);
+            progressBar->setVisible(true);
+            m_pGuldenImpl->showProgressBarLabel();
+            
+            QString tooltip = title + "<br>" + QString("%1% complete.").arg(nProgress);
+            progressBarLabel->setToolTip(tooltip);
+            progressBar->setToolTip(tooltip);
+        }
+    }
 }
 
 void BitcoinGUI::setTrayIconVisible(bool fHideTrayIcon)
